[package]
name = "rippkgs-index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rippkgs-db.workspace = true

clap = { workspace = true, features = ["derive"] }
nix-index = "0.1.7"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.113"
