[package]
name = "rippkgs-index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
eyre.workspace = true
rusqlite.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.113"
