[package]
name = "rippkgs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
eyre.workspace = true
# sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.36.0", features = ["rt", "macros"] }

rippkgs-db.workspace = true
