[package]
name = "rippkgs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
eyre.workspace = true
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio", "tls-rustls"] }
tokio = { workspace = true, features = ["rt", "macros"] }
rippkgs-db.workspace = true
rusqlite = { workspace = true, features = ["functions"] }
fuzzy-matcher = "0.3.7"
lazy_static = "1.4.0"
